tests/pos/i8875.scala
//> using options -Vprint:getters

class A {
  extension (a: Int) {
    def foo: Int = 1
  }
}
